Fixed deprecated warnings in main maxent code