@@ -130,7 +130,7 @@ class CsvOnePass {
         this.headers = headers;
         for (int i = 0; i < headers.length; i++) {
             headers[i] = headers[i].toLowerCase().trim();
-            headerMap.put(headers[i], new Integer(i));
+            headerMap.put(headers[i], Integer.valueOf(i));
         }
     }
 
